--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.taliox</groupId>
-	<artifactId>java-zuliprestapi-bindings</artifactId>
+	<artifactId>zulip-java-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
@@ -38,7 +38,10 @@
 
 
 	<organization>
-		<name>io.taliox</name>
+		<name>taliox</name>
 		<url>taliox.io</url>
 	</organization>
+	<name>Zulip Java  REST API</name>
+	<description>This project aims at providing a thin Java wrapper for the Zulip REST API.</description>
+	<url>taliox.io</url>
 </project>
