--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,12 @@ local.properties
 # Settings
 /.settings
 
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
+
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .scala_dependencies
