changed pom and set snapshot

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -185,7 +183,8 @@
 		<developerConnection>
             scm:git:ssh://git@github.com:taliox/zulip-java-rest.git
         </developerConnection>
-	</scm>
+	  <tag>zulip-java-rest-0.0.1</tag>
+  </scm>
 	<developers>
 		<developer>
 			<name>raLaaa</name>
