--- a/release.properties
+++ b/release.properties
@@ -1,19 +1,12 @@
 #release configuration
-#Thu Apr 25 22:18:07 CEST 2019
-project.dev.io.taliox\:zulip-java-rest=0.0.2-SNAPSHOT
-project.scm.io.taliox\:zulip-java-rest.connection=scm\:git\:git\://github.com/taliox/zulip-java-rest.git
+#Thu Apr 25 22:26:04 CEST 2019
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=zulip-java-rest-0.0.1
 pushChanges=false
-scm.url=scm\:git\:ssh\://git@github.com\:taliox/zulip-java-rest.git
+scm.url=scm\:git\:git@github.com\:dexecutor/taliox/zulip-java-rest.git
 preparationGoals=clean verify
-project.scm.io.taliox\:zulip-java-rest.developerConnection=scm\:git\:ssh\://git@github.com\:taliox/zulip-java-rest.git
-project.rel.io.taliox\:zulip-java-rest=0.0.1
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.io.taliox\:zulip-java-rest.tag=HEAD
-project.scm.io.taliox\:zulip-java-rest.url=https\://github.com/taliox/zulip-java-rest
-exec.snapshotReleasePluginAllowed=false
 exec.additionalArguments=-Dgpg.passphrase\=taliox.io\!
-completedPhase=generate-release-poms
+exec.snapshotReleasePluginAllowed=false
+completedPhase=check-poms
