--- a/release.properties
+++ b/release.properties
@@ -1,19 +1,19 @@
 #release configuration
-#Thu Apr 25 22:26:28 CEST 2019
-project.dev.io.taliox\:zulip-java-rest=0.0.2-SNAPSHOT
-project.scm.io.taliox\:zulip-java-rest.connection=scm\:git\:git\://github.com/taliox/zulip-java-rest.git
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=zulip-java-rest-0.0.1
-pushChanges=false
-scm.url=scm\:git\:git@github.com\:dexecutor/taliox/zulip-java-rest.git
-preparationGoals=clean verify
-project.scm.io.taliox\:zulip-java-rest.developerConnection=scm\:git\:git@github.com\:dexecutor/taliox/zulip-java-rest.git
-project.rel.io.taliox\:zulip-java-rest=0.0.1
-remoteTagging=true
+#Fri Apr 26 11:00:56 CEST 2019
 projectVersionPolicyId=default
+remoteTagging=true
+project.scm.io.taliox\:zulip-java-rest.connection=scm\:git\:git\://github.com/taliox/zulip-java-rest.git
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.io.taliox\:zulip-java-rest.tag=HEAD
+completedPhase=run-preparation-goals
+scm.url=scm\:git\:git@github.com\:taliox/taliox.git
 project.scm.io.taliox\:zulip-java-rest.url=https\://github.com/taliox/zulip-java-rest
+exec.additionalArguments=\ -Psonatype-oss-release
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.rel.io.taliox\:zulip-java-rest=0.0.1
+project.scm.io.taliox\:zulip-java-rest.developerConnection=scm\:git\:git@github.com\:taliox/taliox.git
+project.dev.io.taliox\:zulip-java-rest=0.0.2-SNAPSHOT
+scm.tag=zulip-java-rest-0.0.1
+project.scm.io.taliox\:zulip-java-rest.tag=zulip-java-rest-0.0.1
 exec.snapshotReleasePluginAllowed=false
-exec.additionalArguments=-Dgpg.passphrase\=taliox.io\!
-completedPhase=generate-release-poms
+preparationGoals=clean verify
