removed packaging type pom

--- a/release.properties
+++ b/release.properties
@@ -1,19 +1,12 @@
 #release configuration
-#Fri Apr 26 11:01:54 CEST 2019
+#Fri Apr 26 12:30:49 CEST 2019
 projectVersionPolicyId=default
-remoteTagging=true
-project.scm.io.taliox\:zulip-java-rest.connection=scm\:git\:git\://github.com/taliox/zulip-java-rest.git
-scm.commentPrefix=[maven-release-plugin] 
-completedPhase=scm-commit-release
-scm.url=scm\:git\:git@github.com\:taliox/taliox.git
-project.scm.io.taliox\:zulip-java-rest.url=https\://github.com/taliox/zulip-java-rest
-exec.additionalArguments=\ -Psonatype-oss-release
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-project.rel.io.taliox\:zulip-java-rest=0.0.1
-project.scm.io.taliox\:zulip-java-rest.developerConnection=scm\:git\:git@github.com\:taliox/taliox.git
-project.dev.io.taliox\:zulip-java-rest=0.0.2-SNAPSHOT
-scm.tag=zulip-java-rest-0.0.1
-project.scm.io.taliox\:zulip-java-rest.tag=zulip-java-rest-0.0.1
+exec.additionalArguments=-Dgpg.passphrase\=taliox.io\!
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+pushChanges=false
+completedPhase=check-poms
+scm.url=scm\:git\:git@github.com\:taliox/taliox.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
