--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.taliox</groupId>
 	<artifactId>zulip-java-rest</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<inceptionYear>2016</inceptionYear>
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
