--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,19 @@
 #release configuration
-#Fri Apr 26 12:30:49 CEST 2019
+#Fri Apr 26 12:32:02 CEST 2019
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-exec.additionalArguments=-Dgpg.passphrase\=taliox.io\!
 remoteTagging=true
+project.scm.io.taliox\:zulip-java-rest.connection=scm\:git\:git\://github.com/taliox/zulip-java-rest.git
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=false
-completedPhase=check-poms
+completedPhase=generate-release-poms
 scm.url=scm\:git\:git@github.com\:taliox/taliox.git
+project.scm.io.taliox\:zulip-java-rest.url=https\://github.com/taliox/zulip-java-rest
+exec.additionalArguments=-Dgpg.passphrase\=taliox.io\!
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=false
+project.rel.io.taliox\:zulip-java-rest=0.0.2
+project.scm.io.taliox\:zulip-java-rest.developerConnection=scm\:git\:git@github.com\:taliox/taliox.git
+project.dev.io.taliox\:zulip-java-rest=0.0.3-SNAPSHOT
+scm.tag=0.0.02
+project.scm.io.taliox\:zulip-java-rest.tag=zulip-java-rest-0.0.1
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
